# django-editorjs-fields

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
django_editorjs/: __init__.py  config.py  fields.py  urls.py  views.py  widgets.py
django_editorjs/static/: django-editorjs.css  django-editorjs.js
django_editorjs_fields/: __init__.py  config.py  fields.py  urls.py  utils.py  views.py  widgets.py
django_editorjs_fields/static/django-editorjs-fields/css/: django-editorjs-fields.css
django_editorjs_fields/static/django-editorjs-fields/js/: django-editorjs-fields.js
django_editorjs_fields/templates/django-editorjs-fields/: widget.html
django_editorjs_fields/templatetags/: editorjs.py
example/: .gitignore
example/blog/: admin.py  forms.py  models.py  urls.py  views.py
example/blog/migrations/: 0001_initial.py  0002_comment.py
example/blog/templates/blog/: post_update.html  post_view.html
example/example/: asgi.py  settings.py  urls.py
