[tool.poetry]
name = "django-editorjs-fields"
version = "0.1.9"
description = "Django plugin for using Editor.js"
authors = ["Ilya Kotlyakov <m@2ik.ru>"]
license = "MIT"
repository = "https://github.com/2ik/django-editorjs-fields"
documentation = "https://github.com/2ik/django-editorjs-fields"
readme = "README.md"
keywords = ["editorjs", "django-editor", "django-wysiwyg", "wysiwyg", "django-admin"]

classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
Django = "^3.0.0"
pylint = "^2.6.0"
autopep8 = "^1.5.4"
pylint-django = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
