[tool.poetry]
name = "django-editorjs-fields"
version = "0.2.7"
description = "Django plugin for using Editor.js"
authors = ["Ilya Kotlyakov <m@2ik.ru>"]
license = "MIT"
repository = "https://github.com/2ik/django-editorjs-fields"
documentation = "https://github.com/2ik/django-editorjs-fields"
readme = "README.md"
keywords = ["editorjs", "django-editor", "django-wysiwyg", "wysiwyg", "django-admin"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
Django = "^3.1.0"
pylint = "^2.6.0"
autopep8 = "^1.5.4"
pylint-django = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
